--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.oran.mysandwich.MainActivity" >
+    android:background="@android:color/holo_red_dark"
+    tools:context="com.oran.mysandwich.MainActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
@@ -10,47 +11,51 @@
         android:layout_height="fill_parent" />
 
     <LinearLayout
-         android:layout_margin="10dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_gravity="bottom"
-        android:orientation="horizontal" >
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:orientation="horizontal">
 
-        <View
+        <android.support.v7.widget.AppCompatImageView
             android:id="@+id/indicator1"
-            android:layout_width="5dp"
-            android:layout_height="5dp"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
             android:layout_margin="2dp"
-            android:background="@drawable/indicator_bg" />
+            android:scaleType="centerInside"
+            android:src="@drawable/indicator_bg"/>
 
-        <View
+        <android.support.v7.widget.AppCompatImageView
             android:id="@+id/indicator2"
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:layout_margin="2dp"
-            android:background="@drawable/indicator_bg" />
-
-        <View
+            android:scaleType="centerInside"
+            android:src="@drawable/indicator_bg"/>
+        <android.support.v7.widget.AppCompatImageView
             android:id="@+id/indicator3"
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:layout_margin="2dp"
-            android:background="@drawable/indicator_bg" />
+            android:scaleType="centerInside"
+            android:src="@drawable/indicator_bg" />
 
-        <View
+        <android.support.v7.widget.AppCompatImageView
             android:id="@+id/indicator4"
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:layout_margin="2dp"
-            android:background="@drawable/indicator_bg" />
+            android:scaleType="centerInside"
+            android:src="@drawable/indicator_bg" />
 
-        <View
+        <android.support.v7.widget.AppCompatImageView
             android:id="@+id/indicator5"
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:layout_margin="2dp"
-            android:background="@drawable/indicator_bg" />
+            android:scaleType="centerInside"
+            android:src="@drawable/indicator_bg" />
     </LinearLayout>
 
 </FrameLayout>
