Update the page 5  read names in a page

--- a/app/src/main/res/layout/page5.xml
+++ b/app/src/main/res/layout/page5.xml
@@ -147,7 +147,7 @@
         android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal"
         android:lineSpacingExtra="6sp"
-        android:text="@string/gay_text"
+        android:text="@str6ing/gay_text"
         android:textColor="#ffffff"
         android:textSize="26sp"
         android:textStyle="normal"
