--- a/app/src/main/res/layout/page1.xml
+++ b/app/src/main/res/layout/page1.xml
@@ -178,7 +178,7 @@
     <TextView
         android:id="@+id/textView"
         style="@style/food_text_view"
-        android:layout_width="85dp"
+        android:layout_width="wrap_content"
         android:layout_height="21dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
